--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not dead"
+    "not dead",
+    "not ie 11"
   ],
   "homepage": "https://codegi.gitee.io/jwchatdoc",
   "keyword": [
