--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jwchat",
-  "version": "1.0.12",
+  "version": "1.1.0",
   "private": false,
   "description": "vue chat commponent",
   "author": "Bian <389701057@qq.com>",
@@ -46,7 +46,7 @@
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.2",
     "jest": "^26.1.0",
-    "node-sass": "^4.13.1",
+    "sass": "^1.66.1",
     "sass-loader": "^8.0.2",
     "vue-jest": "^3.0.6",
     "vue-template-compiler": "^2.6.11",
