--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@better-scroll/observe-image": "^2.4.2",
     "@better-scroll/pull-down": "^2.4.2",
     "@better-scroll/scroll-bar": "^2.4.2",
+    "@better-scroll/shared-utils": "^2.5.1",
     "@element-plus/icons-vue": "^2.0.4",
     "element-plus": "^2.1.9",
     "prismjs": "^1.25.0",
@@ -74,7 +75,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "node_modules/cz-git"
     }
   }
 }
