--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "noImplicitAny": false, // 是否在表达式和声明上有隐含的any类型时报错
     "target": "esnext",
     "useDefineForClassFields": true,
     "module": "esnext",
