--- a/package.json
+++ b/package.json
@@ -48,16 +48,17 @@
     "wechat-emoji-parser": "^2.0.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^16.2.3",
-    "@commitlint/config-conventional": "^18.4.3",
+    "@commitlint/cli": "^19.2.2",
+    "@commitlint/config-conventional": "^19.2.2",
     "@types/node": "^16.11.12",
     "@vitejs/plugin-vue": "^3.0.1",
     "@vitejs/plugin-vue-jsx": "^2.0.0",
     "conventional-changelog": "^3.1.25",
     "cz-conventional-changelog": "^3.3.0",
+    "cz-git": "^1.9.1",
     "fs-extra": "^10.0.0",
     "handlebars": "^4.7.7",
-    "husky": "^7.0.4",
+    "husky": "^9.0.11",
     "inquirer": "^8.2.0",
     "sass": "^1.50.0",
     "typescript": "^4.4.4",
