--- a/package.json
+++ b/package.json
@@ -57,9 +57,8 @@
     "cz-conventional-changelog": "^3.3.0",
     "cz-git": "^1.9.1",
     "fs-extra": "^10.0.0",
-    "git-cz": "^4.9.0",
     "handlebars": "^4.7.7",
-    "husky": "^9.0.11",
+    "husky": "9.0.11",
     "inquirer": "^8.2.0",
     "sass": "^1.50.0",
     "typescript": "^4.4.4",
