--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "cz-conventional-changelog": "^3.3.0",
     "cz-git": "^1.9.1",
     "fs-extra": "^10.0.0",
+    "git-cz": "4.8.0",
     "handlebars": "^4.7.7",
     "husky": "9.0.11",
     "inquirer": "^8.2.0",
