--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "auther": "Bian<389701057@qq.com>",
   "description": "Vue 聊天组件",
   "keyword": "chat,Vue",
+  "type": "module",
   "files": [
     "lib"
   ],
@@ -63,6 +64,7 @@
     "inquirer": "^8.2.0",
     "sass": "^1.50.0",
     "typescript": "^4.4.4",
+    "unplugin-element-plus": "^0.8.0",
     "vite": "^3.0.4",
     "vite-plugin-copy": "^0.1.6",
     "vite-plugin-dts": "^0.9.6",
