--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@better-scroll/scroll-bar": "^2.4.2",
     "@better-scroll/shared-utils": "^2.5.1",
     "@element-plus/icons-vue": "^2.0.4",
+    "@vueuse/core": "^10.11.0",
     "element-plus": "^2.1.9",
     "prismjs": "^1.25.0",
     "vue": "^3.2.37",
