--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Npm 
+name: Npm
 
 on:
   push:
@@ -12,12 +12,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 14
-          cache: 'yarn'
-          cache-dependency-path: ./yarn.lock
+          node-version: 18
+          cache: "pnpm"
+          cache-dependency-path: ./pnpm-lock.yaml
       - run: |
-         yarn
-         yarn lib
+          pnpm i
+          pnpm lib
       - id: publish
         uses: JS-DevTools/npm-publish@v1
         with:
