--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,8 @@ jobs:
         with:
           node-version: 18
       - uses: pnpm/action-setup@v4
+        with:
+          version: 9
       - run: |
           pnpm i
           pnpm lib
