--- a/apps/tsconfig.json
+++ b/apps/tsconfig.json
@@ -14,7 +14,7 @@
     "lib": ["esnext", "dom"],
     "skipLibCheck": true,
     "paths": {
-      "packages/*": ["./packages/*"]
+      "jwcaht/*": ["../widget/packages/*"]
     }
   },
   "include": [
