--- a/package.json
+++ b/package.json
@@ -1,14 +1,6 @@
 {
   "name": "JChat",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "private": true,
   "packageManager": "pnpm@10.12.2",
   "dependencies": {
     "element-plus": "^2.10.2",
