--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
   "commentTranslate.hover.enabled": true,
   "editor.inlineSuggest.showToolbar": "always",
-  "i18n-ally.localesPaths": []
+  "i18n-ally.localesPaths": [],
+  "explorer.fileNesting.enabled": true,
+  "explorer.fileNesting.patterns": {
+    "package.json": "pnpm-lock.yaml, pnpm-workspace.yaml",
+    "tsconfig.json": "tsconfig.*.json",
+    "vitest.config.mts": "vitest.setup.ts, vitest.workspace.ts",
+    ".env": ".env.*"
+  }
 }
