--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,5 @@
 # 使安装在根目录下的依赖全部提升到根级别上，防止出现依赖树混乱和其他潜在的版本问题。
 shamefully-hoist=true
 onlyBuiltDependencies=true
+# 优先从本地安装依赖
+link-workspace-packages = true
