--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "element-plus": "^2.10.2",
     "typescript": "^4.9.5",
-    "vue": "^3.5.17"
+    "vue": "^3.5.17",
+    "push_npm": "workspace:*",
+    "jwchat": "workspace:*"
   },
   "scripts": {
     "bootstrap": "pnpm -F jwchat i && pnpm -F jwchatdoc i",
