--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "command": " pnpm -F build start",
+      "command": " pnpm -F @jwchat/build start",
       "name": "dev debugger",
       "request": "launch",
       "type": "node-terminal",
