--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "name": "JChat",
   "private": true,
   "packageManager": "pnpm@10.22.0",
   "dependencies": {
@@ -10,7 +9,8 @@
     "jwchat": "workspace:*"
   },
   "scripts": {
-    "bootstrap": "pnpm -F jwchat i && pnpm -F jwchatdoc i",
+    "bootstrap": "pnpm -F jwchat i && pnpm -F @jwchat/apps i",
+    "dev": "pnpm -F @jwchat/apps dev",
     "stub": "pnpm run -r --parallel stub",
     "postinstall": "pnpm stub",
     "clean": "pnpm run clean:dist && pnpm run -r --parallel clean",
