--- a/widget/package.json
+++ b/widget/package.json
@@ -22,6 +22,7 @@
     "./packages/*": "./packages/*",
     "./*": "./*"
   },
+  "style": "./lib/style.css",
   "main": "./lib/JwChat.umd.js",
   "module": "./lib/JwChat.es.js",
   "types": "./lib/JwChat.d.ts",
@@ -37,6 +38,10 @@
     "install:all": "pnpm install",
     "build:all": "pnpm -r build"
   },
+  "peerDependencies": {
+    "vue": "^3.2.37",
+    "element-plus": "^2.1.9"
+  },
   "dependencies": {
     "@better-scroll/core": "^2.4.2",
     "@better-scroll/mouse-wheel": "^2.4.2",
@@ -47,9 +52,7 @@
     "@better-scroll/shared-utils": "^2.5.1",
     "@element-plus/icons-vue": "^2.0.4",
     "@vueuse/core": "^10.11.0",
-    "element-plus": "^2.1.9",
     "prismjs": "^1.25.0",
-    "vue": "^3.2.37",
     "wechat-emoji-parser": "^2.0.1"
   },
   "devDependencies": {
